Working on bug fix: Added word-wrap: break-word; to the css so that words get broken up if they try to go outside their parents borders

--- a/Website/css/mainStyle.css
+++ b/Website/css/mainStyle.css
@@ -312,13 +312,15 @@ header {
 .cardCategory,#cardCategory {
 	position:relative;
 	display:inline-block;
-	font-size:3em;			
+	font-size:3em;
+	word-wrap:break-word;			
 }
 
 .cardSubcategory,#cardSubcategory {
 	position:relative;
 	display:inline-block;
 	font-size:2.25em;
+	word-wrap:break-word;
 }
 
 .cat{
@@ -334,6 +336,7 @@ header {
 	margin-left:40px;
 	margin-right:40px;
 	text-align:center;
+	word-wrap:break-word;
 }
 
 .cardAnswer,#cardAnswer {
@@ -347,6 +350,7 @@ header {
 	margin-bottom:30px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
+	word-wrap:break-word;
 }
 
 .cardDifficulty,#cardDifficulty {
